yamls/certmanager/templates/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: web-to-websecure
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ssltesting.bibilen.net`)
      kind: Rule
      middlewares:
        - name: web-to-websecure      
      services:
        - name: nginx-deploy-main-service
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ssltesting.bibilen.net`)
      kind: Rule     
      services:
        - name: nginx-deploy-main-service
          port: 80
  tls:
      secretName: traefik-cert
